--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@ body {
   background-color: white;
   padding: 2.6rem 3.2rem;
   color: var(--dkr-grayish-blue);
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
 }
 .testimonial__img {
   grid-area: img;
